Corregida longitud de la tabla nick y actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -108,9 +108,9 @@
     "applied-tax": "Zastosowany podatek",
     "apply": "Aplicar",
     "approve": "Zatwierdź",
-    "approve-document": "Aprobar documento",
+    "approve-document": "Zatwierdź dokument",
     "approve-document-same-date": "Zatwierdź dokument w tym samym dniu",
-    "approved": "Aprobado",
+    "approved": "Zatwierdzono",
     "april": "Abril",
     "are-you-sure": "Tego nie można cofnąć. Czy na pewno chcesz kontynuować?",
     "are-you-sure-action": "Ta akcja wymaga potwierdzenia. Czy na pewno chcesz kontynuować?",
@@ -206,7 +206,7 @@
     "cant-load-controller": "Nie można załadować kontrolera '%controllerName%'.",
     "cant-modify-reference": "Nie można zmodyfikować odniesienia.",
     "cant-remove-accounting-entry": "Nie można usunąć wpisu księgowego",
-    "cant-remove-invoice-refund": "Nie można usunąć faktury, która ma już zwrot",
+    "cant-remove-invoice-refund": "Nie można usunąć faktury, która ma już korektę (zwrot)",
     "cant-remove-receipt": "Nie można usunąć rachunku",
     "cant-update-audit-log": "No se puede modificar un registro de auditoria",
     "card": "Karta",
@@ -238,7 +238,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "Miasta",
     "city": "Miasto",
-    "click-link-to-add": "Puede añadir archivos desde la biblioteca, en el menú administrador.",
+    "click-link-to-add": "Możesz dodać pliki z biblioteki w menu administratora.",
     "clone": "Duplikuj",
     "clone-account-entry": "Klonuj wpis księgowy",
     "close": "Zamknij",
@@ -280,7 +280,7 @@
     "company": "Firma",
     "company-commission-info": "Będzie stosowane tylko do wybranej firmy",
     "company-manager": "Administrator firmy",
-    "company-name": "Nombre de empresa",
+    "company-name": "Nazwa firmy",
     "company-warehouse": "Firma\/Magazyn",
     "comparative": "Porównawczy",
     "compared": "Porównany",
@@ -423,7 +423,7 @@
     "deleted-model": "Usunięty %model% (%key%) %desc%",
     "delivery-note": "Albaran",
     "delivery-note-email-subject": "Państwa dowód dostawy %code%",
-    "delivery-note-email-text": "Buenos días, le adjunto su albarán %code%",
+    "delivery-note-email-text": "Dzień dobry, załączam Pani\/Panu dowód dostawy %code%",
     "delivery-notes": "Faktury dostawy",
     "delivery-notes-button": "Faktury realizowane:",
     "department": "Dział",
@@ -433,7 +433,7 @@
     "desc-alfa-code-3": "Oficjalna identyfikacja dla nazw krajów i innych jednostek administracyjnych",
     "desc-business-name": "Nombre oficial del cliente, para las facturas y otros documentos.",
     "desc-business-name-2": "Nazwa fiskalna lub prawnie zarejestrowana klienta",
-    "desc-customer-name": "Nombre por el cual el cliente es conocido. Para uso interno.",
+    "desc-customer-name": "Nazwa, pod którą klient jest znany. Do użytku wewnętrznego.",
     "desc-parent-family": "Wskaż, czy rodzina jest zgrupowana na wyższym poziomie.",
     "desc-payment-days": "Przykład: 1,15,31",
     "desc-provicer-business-name-2": "Opis nazwy firmy dostawcy 2",
@@ -645,7 +645,7 @@
     "for-all-exercises": "Dla wszystkich ćwiczeń",
     "for-purchase": "Do zakupu",
     "for-sale": "Na sprzedaż",
-    "foresee": "Prever",
+    "foresee": "Przewidzieć",
     "format": "Format",
     "formula-cost-price": "cena kosztowa + x% + y",
     "formula-sale-price": "cena - x% - y",
@@ -662,7 +662,7 @@
     "full-path": "Pełna ścieżka",
     "gap-found": "Znaleziono lukę dla numeru %numero%, dnia %fecha%, %codserie% i firmy %idempresa%",
     "general": "Ogólny",
-    "general-concepts": "Conceptos generales",
+    "general-concepts": "Ogólne pojęcia",
     "general-data": "Dane ogólne",
     "generate": "Generuj",
     "generate-accounting-entries": "Generuj wpisy księgowe",
@@ -672,7 +672,7 @@
     "generate-receipts": "Generuj paragon",
     "generate-settlements": "Generuj rozliczenia",
     "generate-test-data": "Generować dane testowe",
-    "generate-title": "Genera el informe",
+    "generate-title": "Generuj raport",
     "generated-accounting-entries": "Wygenerowano %quantity% wpisów księgowych.",
     "generated-accounts": "%quantity% wygenerowanych kont księgowych.",
     "generated-agents": "Wygenerowano %quantity% agentów.",
@@ -719,7 +719,7 @@
     "header": "Cabecera",
     "heading-account-group-id": "ID grupy kont",
     "heading-account-id-root": "ID rodzica",
-    "health": "Salud",
+    "health": "Zdrowie",
     "height": "Wysokość",
     "hello": "Cześć",
     "help": "Pomoc",
@@ -750,7 +750,7 @@
     "impacted-tax-subaccount": "Podkonto podatku odsprzedanego",
     "import": "Importować",
     "import-accounting-plan": "Importuj plan księgowy",
-    "import-accounting-plan-p": "Deje este campo en blanco para usar el plan contable predeterminado. O bien seleccione un archivo con su plan contable personalizado.",
+    "import-accounting-plan-p": "Proszę pozostawić to pole puste, aby użyć domyślnego planu kont. Alternatywnie wybierz plik ze swoim spersonalizowanym planem kont.",
     "import-file": "Plik importu",
     "in-progress": "W trakcie",
     "in-stock": "Na magazynie",
@@ -899,7 +899,7 @@
     "login-image": "Imagen de login",
     "login-ok": "Sesión iniciada satisfactoriamente (cookie). Usuario: '%nick%'",
     "login-password-fail": "Użytkownik lub hasło są niepoprawne",
-    "login-text": "Escriba su nombre de usuario y contraseña para iniciar sesión",
+    "login-text": "Wpisz swoją nazwę użytkownika i hasło, aby się zalogować",
     "login-to-continue": "Zaloguj się, aby kontynuować",
     "login-to-continue-p": "Musisz się zalogować, aby kontynuować tę akcję. Kliknij, aby się zalogować lub załóż konto.",
     "login-user-not-found": "Nie znaleziono użytkownika: %nick%",
@@ -1039,7 +1039,7 @@
     "not-valid-fiscal-number": "%type% %number% jest nieprawidłowy",
     "not-valid-image": "To nie jest prawidłowy obraz",
     "not-valid-percentage-retention": "Nieprawidłowy procent. Musi być większy niż 0.00",
-    "note": "Nota",
+    "note": "Notatka",
     "notes": "Notatki",
     "notice": "Powiadomienie",
     "notices": "Powiadomienia",
@@ -1137,7 +1137,7 @@
     "personalized": "Personalizado",
     "phase": "Faza",
     "phone": "Telefon",
-    "phone2": "Teléfono 2",
+    "phone2": "Telefon 2",
     "phones": "Telefony",
     "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
     "php-extension-not-found": "Nie masz zainstalowanego rozszerzenia %extension% PHP.",
@@ -1156,7 +1156,7 @@
     "plugin-need-update": "Wtyczka %plugin% będzie wymagać aktualizacji, aby działała z nową wersją FacturaScripts.",
     "plugin-need-update-but": "Wtyczka %plugin% nie ma jeszcze kompatybilnej aktualizacji.",
     "plugin-needed": "Wymagany jest wtyczka %pluginName%.",
-    "plugin-needs-fs-version": "El plugin %pluginName% necesita FacturaScripts %minVersion% pero tiene instalado FacturaScripts %version%",
+    "plugin-needs-fs-version": "Wtyczka %pluginName% wymaga FacturaScripts %minVersion%, ale zainstalowany jest FacturaScripts %version%",
     "plugin-not-compatible": "Wtyczka %pluginName% nie jest zgodna z FacturaScripts %version%",
     "plugin-order": "Zamówienie: %num%",
     "plugin-phpversion-error": "Wtyczka %pluginName% wymaga PHP %php% lub nowszego",
@@ -1289,7 +1289,7 @@
     "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "renumber-invoices-success": "Faktury z roku '%exercise%' zostały poprawnie ponumerowane",
-    "repeat-new-password": "Repite la contraseña",
+    "repeat-new-password": "Powtórz hasło",
     "repeat-password": "Repetir contraseña",
     "reply": "Odpowiedź",
     "report": "Raport",
@@ -1315,7 +1315,7 @@
     "rol": "Grupa",
     "role": "Grupa",
     "roles": "Role",
-    "rules": "Reglas",
+    "rules": "Zasady",
     "run": "Uruchom",
     "running-plugin-cron": "Uruchamianie cron wtyczki %pluginName%",
     "sales": "Sprzedaż",
@@ -1382,7 +1382,7 @@
     "short": "Krótki",
     "short-name": "Krótka nazwa",
     "show": "Pokaż",
-    "show-balance-graphic": "Mostrar gráficos en asientos",
+    "show-balance-graphic": "Pokaż wykresy na siedzeniach",
     "show-crm-warnings": "Pokaż ostrzeżenia CRM",
     "show-expired-receipts": "Pokaż przeterminowane pokwitowania",
     "show-month-stats": "Pokaż statystyki miesięczne",
@@ -1399,7 +1399,7 @@
     "small": "Mały",
     "smaller-than": "Mniejsze niż",
     "soap-extension-not-installed": "Rozszerzenie SOAP nie jest zainstalowane w PHP. Skontaktuj się z dostawcą hostingu, aby je aktywować.",
-    "social-security-number": "Número Seguridad Social",
+    "social-security-number": "Numer ubezpieczenia społecznego",
     "sort": "Sortowanie",
     "sort-by-column": "Sortuj wg kolumny",
     "sort-by-date-asc": "Sortuj wg daty rosnąco",
@@ -1444,7 +1444,7 @@
     "subaccount-irpf": "Konto dla potrąceń",
     "subaccount-irpf-creditor": "Rachunek IRPF dla zakupów",
     "subaccount-not-found": "Subkonto %subAccountCode% nie zostało znalezione.",
-    "subaccount-purchases": "Cuenta para compras",
+    "subaccount-purchases": "Konto do zakupów",
     "subaccount-pyg-not-found": "Subkonto zysków i strat nie znalezione",
     "subaccount-sales": "Konto sprzedaży",
     "subaccounts": "Subkonta",
@@ -1618,7 +1618,7 @@
     "values": "Wartości",
     "variables": "Zmienne",
     "variant": "Wariant",
-    "variants": "Variantes",
+    "variants": "Warianty",
     "vat": "VAT",
     "vat-document": "Dokument",
     "vat-exception": "Wyjątek VAT",
