--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -723,7 +723,7 @@
     "height": "Altura",
     "hello": "Olá",
     "help": "Socorro",
-    "help-button-p": "Consulta la ayuda en cada pantalla",
+    "help-button-p": "Consulte a ajuda em cada ecrã",
     "help-server-accepts-filesize": "Este servidor aceita um tamanho máximo de %size% MB.",
     "hide": "Ocultar",
     "high": "Alto",
@@ -1062,7 +1062,7 @@
     "only-insert": "Somente adicionar",
     "only-owner-data": "Mostrar apenas os registos do usuário",
     "only-pending": "Só pendentes",
-    "only-suspended": "only-suspended",
+    "only-suspended": "Apenas suspensos",
     "open": "Abrir",
     "open-exercise": "Abrir exercício",
     "open-tab": "Abrir numa nova aba",
@@ -1429,7 +1429,7 @@
     "status-value-is-number": "El campo estado deve ser numérico.",
     "stock": "estoque",
     "stock-transfer": "Transferência de stock",
-    "stock-transfers": "stock transfers",
+    "stock-transfers": "Transferências de stock",
     "stockmax": "Estoque max.",
     "stockmin": "Stock min.",
     "storage-limit-almost": "Limite de armazenamento quase atingido (%limit%). Restam %free%",
@@ -1531,7 +1531,7 @@
     "ticket": "Bilhete",
     "tickets": "Bilhetes",
     "time": "Hora",
-    "timezone": "Selecione fuso horário",
+    "timezone": "Selecione o fuso horário",
     "title": "Título",
     "title-font-size": "Tamanho da fonte do título",
     "title-url": "Título (URL)",
@@ -1582,7 +1582,7 @@
     "unlimited": "Ilimitado",
     "unlink": "Desvincular",
     "unlink-file": "Desvincular arquivo",
-    "unlink-install-ok": "Instalación borrada del registro correctamente.",
+    "unlink-install-ok": "Instalação removida do registro corretamente.",
     "unlock-entry": "Desbloquear",
     "unpaid": "Impago",
     "until-accounting-entry": "Até lançamento contábil",
