Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1594,8 +1594,8 @@
     "update-time": "Hora d'actualització",
     "updated-model": "Actualitzat %model% (%key%) %desc%",
     "updater": "Actualitzador",
-    "updates-available": "Actualizaciones disponibles",
-    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
+    "updates-available": "Actualitzacions disponibles",
+    "updates-available-p": "Hi ha actualitzacions disponibles de FacturaScripts. Per favor, feu clic a l'actualitzador i descarregueu la nova versió. Les actualitzacions corrigen fallos i añaden noves funcions.",
     "updating-attached-relations": "Actualitzant comptadors d'arxius adjunts",
     "upload-file": "Pujar arxiu",
     "uploaded-at": "Pujat en",
