--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1143,7 +1143,7 @@
     "php-extension-not-found": "No tienes la extensión %extension% de PHP instalada.",
     "php-support-end": "El soporte para PHP %current% terminará pronto. Por favor, actualiza PHP a la versión %min% o superior.",
     "physical-stock": "Stock físico",
-    "picking": "Vybírání",
+    "picking": "Vyřizování",
     "plan": "Plan",
     "please-enter-value": "Por favor, introduzca un valor para el campo",
     "plugin": "Plugin",
@@ -1596,7 +1596,7 @@
     "updater": "Actualizador",
     "updates-available": "Aktualizace jsou k dispozici",
     "updates-available-p": "Jsou k dispozici aktualizace pro FacturaScripts. Prosím, klikněte na aktualizátor a stáhněte si novou verzi. Aktualizace opravují chyby a přidávají nové funkce.",
-    "updating-attached-relations": "Aktualizace připojených vztahů",
+    "updating-attached-relations": "Aktualizace připojených vazeb",
     "upload-file": "Subir archivo",
     "uploaded-at": "Cargado en",
     "url": "Dirección web",
