--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1,5 +1,5 @@
 {
-    "abbreviated": "Abreviado",
+    "abbreviated": "Skrócony",
     "about": "O nas",
     "accept": "Zaakceptować",
     "accept-all": "Akceptuj wszystko",
@@ -12,10 +12,10 @@
     "account": "Konto",
     "account-bad-parent": "Konto %codcuenta% jest powiązane z błędnym kontem nadrzędnym.",
     "account-balance": "Saldo konta",
-    "account-code": "Código de cuenta",
+    "account-code": "Kod konta",
     "account-code-bigger-than-subaccounts": "Kod konta %code% jest dłuższy niż subkonta",
     "account-code-lower-than-parent": "Kod konta %code% jest krótszy niż rodzica",
-    "account-data-missing": "Faltan datos en la cuenta",
+    "account-data-missing": "Brak danych na koncie",
     "account-dot-code": "Kropka do autouzpełnienia zer. Przykład: 11.1 = 1100000001",
     "account-length": "Długość subkonta",
     "account-length-error": "Niepoprawna długość subkonta. Subkonto %code% musi mieć długość określoną w ćwiczeniu.",
@@ -58,7 +58,7 @@
     "add-new-plugin": "Dodaj nową wtyczkę",
     "additional-text": "Tekst dodatkowy",
     "address": "Adres",
-    "addresses": "Direcciones",
+    "addresses": "Adresy",
     "addresses-and-contacts": "Adresy i kontakty",
     "admin": "Administrator",
     "administrator": "Administrator",
@@ -69,7 +69,7 @@
     "agent-dont-have-associated-supplier": "Agent nie ma powiązanego dostawcy",
     "agents": "Agenci",
     "alert": "Alert",
-    "alerts": "Alertas",
+    "alerts": "Powiadomienia",
     "alfa-code-2": "Kod alfa 2",
     "alfa-code-3": "Kod alfa 3",
     "alias": "Pseudonim",
@@ -116,8 +116,8 @@
     "are-you-sure-action": "Ta akcja wymaga potwierdzenia. Czy na pewno chcesz kontynuować?",
     "asset": "Aktywa",
     "assigned": "Asignado",
-    "attached-file": "Archivo adjunto",
-    "attached-files": "Archivos adjuntos",
+    "attached-file": "Załączony plik",
+    "attached-files": "Pliki załączone",
     "attribute": "Atrybut",
     "attribute-value-1": "Wartość atrybutu 1",
     "attribute-value-2": "Wartość atrybutu 2",
@@ -132,7 +132,7 @@
     "auto": "Auto",
     "auto-apply-to": "Automatycznie zastosuj do",
     "automatic": "Automatyczny",
-    "available": "Disponible",
+    "available": "Dostępny",
     "average": "Średnia",
     "average-cost": "Średnia cena",
     "average-purchase-price": "Średnia cena zakupu",
@@ -145,7 +145,7 @@
     "balance-account-abreviated": "Zrównoważony skrót konta",
     "balance-amounts": "Bilans sum i sald",
     "balance-sheet": "Balance de Situación",
-    "balance-sheets": "Balances",
+    "balance-sheets": "Bilansy",
     "balances": "Bilansy",
     "bank-account": "Konto bankowe",
     "bank-accounts": "Konta bankowe",
@@ -153,8 +153,8 @@
     "bank-mandate-date": "Data mandatu",
     "banking-movements": "Movimientos bancarios",
     "barcode": "Kod kreskowy",
-    "bcc": "CCO",
-    "become-sponsor": "Hazte patrocinador",
+    "bcc": "BCC",
+    "become-sponsor": "Zostań sponsorem",
     "big": "Duży",
     "billing": "Fakturowanie",
     "billing-address": "Adres do faktury",
@@ -208,7 +208,7 @@
     "cant-remove-accounting-entry": "Nie można usunąć wpisu księgowego",
     "cant-remove-invoice-refund": "Nie można usunąć faktury, która ma już korektę (zwrot)",
     "cant-remove-receipt": "Nie można usunąć rachunku",
-    "cant-update-audit-log": "No se puede modificar un registro de auditoria",
+    "cant-update-audit-log": "Nie można zmodyfikować rejestru audytu",
     "card": "Karta",
     "carrier": "Przewoźnik",
     "carriers": "Przewoźnicy",
@@ -226,7 +226,7 @@
     "check-table": "Błąd podczas sprawdzania tabeli '%tableName%'",
     "check-vies": "Sprawdź VIES",
     "checked": "Zaznaczone",
-    "children": "Niño",
+    "children": "Dziecko",
     "children-accounts": "Konta podrzędne",
     "choose-currency": "Wybierz walutę",
     "choose-doc-type": "Wybierz rodzaj dokumentu",
@@ -312,10 +312,10 @@
     "conversion-rate-not-0": "Stawka konwersji nie może być 0.",
     "convert-into-customer": "Zamień na klienta",
     "convert-into-supplier": "Konwertuj do dostawcy",
-    "cookies": "Cookies",
+    "cookies": "Ciasteczka",
     "copy": "Kopiuj",
     "copy-p": "Wypełnij formularz, aby zrobić kopię tego modelu",
-    "copy-subaccounts": "Copiar plan contable",
+    "copy-subaccounts": "Kopiuj plan kont",
     "core-update": "Aktualizacja rdzenia do wersji %version%",
     "core-update-warning": "Ostrzeżenia o aktualizacji",
     "correct": "Correcto",
@@ -344,7 +344,7 @@
     "currency": "Waluta",
     "currency-position": "Pozycja symbolu waluty",
     "current-quarter": "Bieżący kwartał",
-    "current-risk": "Riesgo actual",
+    "current-risk": "Aktualne ryzyko",
     "customer": "Klient",
     "customer-account-not-found": "Nie znaleziono subkonta klienta",
     "customer-banking-accounts": "Konta bankowe",
@@ -468,7 +468,7 @@
     "do-not-group": "Nie grupować",
     "do-nothing": "Nie rób nic",
     "doc-type": "Typ dokumentu",
-    "document": "Documento",
+    "document": "Dokument",
     "document-configuration": "Konfiguracja dokumentów",
     "document-report": "Informe de documentos",
     "document-sequence": "Sekwencja dokumentu",
@@ -476,7 +476,7 @@
     "document-states": "Stany dokumentu",
     "document-type": "Tipo documento",
     "document-type-valid-length": "Nieprawidłowy typ dokumentu (musi mieć od 1 do 20 znaków).",
-    "document-wildcard-info": "Documento indicado en la cabecera del asiento contable",
+    "document-wildcard-info": "Dokument wskazany w nagłówku wpisu księgowego",
     "document-without-total": "Dokument %document% bez sumy lub z sumą równą 0.",
     "documentation": "Dokumentacja",
     "documents": "Documentos",
@@ -524,7 +524,7 @@
     "enable": "Aktywuj",
     "enable-api": "Aktywuj API",
     "enable-updates-beta": "Włącz aktualizacje beta",
-    "enabled": "Activo",
+    "enabled": "Aktywny",
     "enabled-plugins": "Aktywne wtyczki",
     "encrypt": "Szyfrowanie",
     "end-date": "Data zakończenia",
@@ -554,7 +554,7 @@
     "es-tax-exception-e2": "Hiszpania: wyjątek na mocy artykułu 21 ustawy o VAT",
     "es-tax-exception-e3": "Hiszpania: wyjątek z artykułu 22 ustawy o VAT",
     "es-tax-exception-e4": "Hiszpania: wyjątek na mocy artykułu 23 i 24 ustawy o VAT",
-    "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
+    "es-tax-exception-e5": "Hiszpania: wyjątek na podstawie artykułu 25 ustawy o VAT",
     "es-tax-exception-e6": "Hiszpania: wyjątek z innej przyczyny",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
@@ -651,7 +651,7 @@
     "formula-sale-price": "cena - x% - y",
     "formula-to-apply": "Formuła do zastosowania",
     "fourth-quarter": "4. kwartał",
-    "fourth-trimester": "Cuarto trimestre",
+    "fourth-trimester": "Czwarty kwartał",
     "free": "Gratis",
     "friday": "Piątek",
     "from": "Od",
@@ -668,7 +668,7 @@
     "generate-accounting-entries": "Generuj wpisy księgowe",
     "generate-accounting-entry": "Generuj wpis księgowy",
     "generate-doc-type": "Generować typ dokumentu",
-    "generate-invoice": "Crear factura",
+    "generate-invoice": "Utwórz fakturę",
     "generate-receipts": "Generuj paragon",
     "generate-settlements": "Generuj rozliczenia",
     "generate-test-data": "Generować dane testowe",
@@ -728,7 +728,7 @@
     "hide": "Ukryj",
     "high": "Wysoki",
     "high-purchase-price": "Precio más alto",
-    "hint-create-accounting-entry": "Crear el asiento contable para la regularización de impuestos del periodo",
+    "hint-create-accounting-entry": "Utwórz wpis księgowy dla regulacji podatków za okres",
     "hint-vat-register": "Zobacz\/zmodyfikuj rejestr podatku",
     "history": "Historia",
     "homepage": "Strona główna",
@@ -764,7 +764,7 @@
     "initial-number": "Numer początkowy",
     "insert-update": "Dodaj lub zmodyfikuj",
     "installed": "Zainstalowane",
-    "installed-plugins": "Instalados",
+    "installed-plugins": "Zainstalowane",
     "installer": "Instalador",
     "installer-p": "Bienvenido al instalador de FacturaScripts. Rellena los campos necesarios para conectar a la base de datos.",
     "installer-requirements": "Następujące rozszerzenia i funkcje są wymagane w FacturaScripts:",
@@ -890,7 +890,7 @@
     "lock-accounting": "Zablokować księgowość",
     "lock-entry": "Zablokuj wpis",
     "lock-invoice": "Oznacz jako wystawioną",
-    "lock-unlock": "(Des)Bloquear",
+    "lock-unlock": "(Od)zablokować",
     "lock-unlock-account-entry": "Blokować\/Odblokować zapis księgowy",
     "locked": "Zablokowany",
     "log": "Dziennik",
@@ -980,12 +980,12 @@
     "month-7": "Julio",
     "month-8": "Agosto",
     "month-9": "Septiembre",
-    "month-name": "Nombre del Mes",
+    "month-name": "Nazwa miesiąca",
     "month-wildcard-info": "Aktualny miesiąc (z obecnej daty)",
     "monthly": "Miesięczny",
     "monthly-payment": "Pago mensual",
     "months": "Miesiące",
-    "more": "Más",
+    "more": "Więcej",
     "more-fields": "Więcej pól",
     "more-plugins": "Więcej wtyczek...",
     "move-lines": "Przenieś linie",
@@ -1086,7 +1086,7 @@
     "other-data": "Inne dane",
     "others-filters": "Inne filtry",
     "out-of-stock": "Brak towaru",
-    "page": "Página",
+    "page": "Strona",
     "page-break": "Złamanie strony",
     "page-configuration": "Strona ustawień",
     "page-not-found": "Strona nie znaleziona",
@@ -1170,7 +1170,7 @@
     "port": "Port",
     "position": "Stanowisko",
     "positive-balance": "Dodatnie saldo",
-    "post-office-box": "Apartado",
+    "post-office-box": "Skrytka pocztowa",
     "postgresql": "PostgreSQL",
     "precio": "Cena",
     "predefined-concepts": "Predefiniowane pojęcia",
@@ -1188,7 +1188,7 @@
     "print": "Drukuj",
     "print-bank-data": "Imprimir cuenta bancaria",
     "print-data-records": "Drukuj wszystkie rekordy",
-    "print-export-options": "Opciones de imprimir y exportar",
+    "print-export-options": "Opcje drukowania i eksportu",
     "print-list-of-records": "Imprimir lista de registros",
     "print-price": "Drukuj ceny",
     "print-quantity": "Drukuj ilość",
@@ -1202,7 +1202,7 @@
     "processing": "Przetwarzanie",
     "product": "Produkt",
     "product-not-found": "Produkt %ref% nie znaleziony",
-    "products": "Productos",
+    "products": "Produkty",
     "profile": "Profil",
     "profit-and-loss": "Straty i zyski",
     "profit-and-loss-balance": "Bilans zysków i strat",
@@ -1238,7 +1238,7 @@
     "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Czytaj więcej",
     "readonly": "Tylko do odczytu",
-    "rebuild": "Reconstruir",
+    "rebuild": "Rekonstruować",
     "rebuild-completed": "Przebudowa zakończona",
     "rebuild-stock": "Odbudować zapas",
     "receipt": "Paragon",
@@ -1265,7 +1265,7 @@
     "refunds": "Zwróty",
     "register": "Registrar",
     "register-install-ad": "Zarejestruj instalację FacturaScripts",
-    "register-install-ad-p": "Jeśli zarejestrujesz instalację FacturaScripts, otrzymasz 1 miesiąc sponsoringu PRO, który pozwala na pobranie jednej z naszych ekskluzywnych wtyczek. Pomaga nam także uzyskać statystyki dotyczące wersji rdzenia i PHP.",
+    "register-install-ad-p": "Jeśli zarejestrujesz instalację FacturaScripts, otrzymasz 1 miesiąc sponsoringu PRO, który pozwala pobrać jedną z naszych ekskluzywnych wtyczek. Pomaga nam również uzyskać statystyki dotyczące wersji rdzenia i PHP.",
     "register-installation": "Zarejestruj instalację",
     "register-installation-p": "Zarejestruj swoją instalację, aby móc aktualizować płatne lub prywatne wtyczki.",
     "register-symbol": "#",
@@ -1279,10 +1279,10 @@
     "related-subaccount-purchases-sales": "Powiązana subkonta do zakupów i sprzedaży",
     "reloading": "Ładowanie...",
     "remove-filter": "Usuń filtr",
-    "remove-from-list": "Quitar",
+    "remove-from-list": "Usuń",
     "removing-logs-until": "Usuwanie logów do %date%",
     "renew": "Odnów",
-    "renumber": "Renumerar",
+    "renumber": "Przypisz numerację",
     "renumber-accounting": "Ponownie numeruj zapisy",
     "renumber-accounting-error": "Wystąpił błąd podczas renumeracji wpisów w roku podatkowym %exerciseCode%",
     "renumber-accounting-ok": "Ponowna numeracja zapisów zakończona",
@@ -1436,7 +1436,7 @@
     "storage-limit-reached": "Osiągnięto limit przechowywania",
     "stripe": "Stripe",
     "structured-data-csv": "Plik CSV",
-    "sub-account": "Subcuenta",
+    "sub-account": "Subkonto",
     "sub-type": "Podtyp",
     "subaccount": "Podkonto",
     "subaccount-bad-codcuenta": "Subkonto %codsubcuenta% ma przypisaną niepoprawną konto.",
@@ -1604,7 +1604,7 @@
     "use-holes-invoices-esp": "Jeśli odznaczysz używanie otworów w fakturach i usuniesz którąś, lukę pozostanie w fakturowaniu i będziesz mieć problemy z urzędem skarbowym",
     "user": "Użytkownik",
     "user-and-config": "Usuario y configuración",
-    "users": "Usuarios",
+    "users": "Użytkownicy",
     "using-apc": "Używając pamięci podręcznej APC",
     "using-filecache": "Używając pamięci podręcznej plików",
     "using-memcache": "Używając Memcache",
@@ -1636,7 +1636,7 @@
     "view-column-net-subtotal": "Zobacz kolumnę subtotal lub netto",
     "view-estimation": "Zobacz kosztorys",
     "view-order": "Zobacz zamówienie",
-    "warehouse": "Almacén",
+    "warehouse": "Magazyn",
     "warehouse-cant-be-same": "Magazyn źródłowy i docelowy nie mogą być takie same.",
     "warehouse-must-be-same-business": "Los almacenes de origen y destino deben ser de la misma empresa",
     "warehouses": "Magazyny",
@@ -1648,7 +1648,7 @@
     "weeks": "Tygodnie",
     "weight": "Waga",
     "which-logs-store": "Jakie logi przechowywać",
-    "width": "Ancho",
+    "width": "Szerokość",
     "wildcard": "Comodín",
     "wildcard-general-info": "Zostanie zastąpiony odpowiednią wartością",
     "wildcard-title": "Zmienna zastępująca wartość",
