--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1380,7 +1380,7 @@
     "shop": "Loja",
     "shops": "Lojas",
     "short": "Curto",
-    "short-name": "Nome curto",
+    "short-name": "Nome Curto",
     "show": "Mostrar",
     "show-balance-graphic": "Mostrar gráficos em lançamentos",
     "show-crm-warnings": "Mostrar avisos CRM",
