--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -440,7 +440,7 @@
     "desc-provider-business-name": "Nome comercial do fornecedor Descriptio",
     "desc-provider-name": "Nome do provedor de descrição",
     "desc-rate-code": "Código para uso interno da taxa.",
-    "desc-vat-document": "Identifier of the document where the tax is applied",
+    "desc-vat-document": "Identificador do documento onde o imposto é aplicado",
     "description": "Descrição",
     "description-1": "Descrição 1",
     "description-2": "Descrição 2",
@@ -805,7 +805,7 @@
     "irpf-subaccount-not-found": "Subconta de IRPF não encontrada",
     "is-admin": "É administrador",
     "is-creditor": "É credor",
-    "is-person": "É um indivíduo (não uma empresa)",
+    "is-person": "É uma pessoa física (não uma empresa)",
     "iso": "ISO",
     "issued": "Emitido",
     "item-limit": "Itens por página",
@@ -823,7 +823,7 @@
     "june": "Junho",
     "justified": "justified",
     "key-google-maps": "Chave do Google Maps",
-    "keys": "keys",
+    "keys": "Chaves",
     "lang-code": "Código de idioma",
     "language": "Língua",
     "languages-ca_ES": "Catalão",
@@ -967,7 +967,7 @@
     "model": "Modelo",
     "model-not-found": "Modelo não encontrado: %model%",
     "monday": "segunda-feira",
-    "month": "Mes",
+    "month": "Mês",
     "month-1": "Janeiro",
     "month-10": "Outubro",
     "month-11": "Novembro",
@@ -1338,7 +1338,7 @@
     "select-all": "selecionar-todos",
     "select-none": "Selecionar nenhum",
     "select-plugin-zip-file": "Selecione o arquivo zip do plugin:",
-    "select-user": "Select User",
+    "select-user": "Selecionar usuário",
     "selected-quantity": "Quantidade selecionada",
     "selector-number": "Seletor",
     "send": "Enviar",
